@@ -41,6 +41,11 @@ public final class EntityUtil {
     return modifiedEntities;
   }
 
+  /**
+   * Hashes the given entities by their primary key
+   * @param entities the entities to hash
+   * @return the hashed entities
+   */
   public static Map<Entity.Key, Entity> hashByPrimaryKey(final List<Entity> entities) {
     Util.rejectNullValue(entities, "entities");
     final Map<Entity.Key, Entity> entityMap = new HashMap<Entity.Key, Entity>();
@@ -215,6 +220,11 @@ public final class EntityUtil {
     });
   }
 
+  /**
+   * @param entityID the entity ID
+   * @param propertyIDs the property IDs
+   * @return a list containing the properties identified by the given propertyIDs
+   */
   public static List<Property> getProperties(final String entityID, final Collection<String> propertyIDs) {
     if (propertyIDs == null || propertyIDs.isEmpty()) {
       return new ArrayList<Property>(0);
@@ -228,6 +238,11 @@ public final class EntityUtil {
     return properties;
   }
 
+  /**
+   * @param entityID the entity ID
+   * @param propertyIDs the property IDs
+   * @return the given properties sorted by caption, or if that is not available, property ID
+   */
   public static List<Property> getSortedProperties(final String entityID, final Collection<String> propertyIDs) {
     final List<Property> properties = getProperties(entityID, propertyIDs);
     sort(properties);
@@ -235,6 +250,10 @@ public final class EntityUtil {
     return properties;
   }
 
+  /**
+   * Sorts the given properties by caption, or if that is not available, property ID
+   * @param properties the properties to sort
+   */
   public static void sort(final List<? extends Property> properties) {
     Util.rejectNullValue(properties, "properties");
     final Collator collator = Collator.getInstance();
@@ -245,6 +264,10 @@ public final class EntityUtil {
     });
   }
 
+  /**
+   * @param entityID the entity ID
+   * @return a list containing all updatable properties associated with the given entity ID
+   */
   public static List<Property> getUpdatableProperties(final String entityID) {
     final List<Property.ColumnProperty> columnProperties = Entities.getColumnProperties(entityID,
             !Entities.getIdSource(entityID).isAutoGenerated(), false, false);
@@ -262,6 +285,10 @@ public final class EntityUtil {
     return updatable;
   }
 
+  /**
+   * @param entities the entities to copy
+   * @return deep copies of the entities
+   */
   public static List<Entity> copyEntities(final List<Entity> entities) {
     Util.rejectNullValue(entities, "entities");
     final List<Entity> copies = new ArrayList<Entity>(entities.size());
@@ -272,6 +299,25 @@ public final class EntityUtil {
     return copies;
   }
 
+  /**
+   * @param entityKeys the keys to copy
+   * @return deep copies of the given keys
+   */
+  public static List<Entity.Key> copyKeys(final List<Entity.Key> entityKeys) {
+    Util.rejectNullValue(entityKeys, "entityKeys");
+    final List<Entity.Key> copies = new ArrayList<Entity.Key>(entityKeys.size());
+    for (final Entity.Key key : entityKeys) {
+      copies.add((Entity.Key) key.getCopy());
+    }
+
+    return copies;
+  }
+
+  /**
+   * @param entityID the entity ID
+   * @param referenceEntities entities referenced by the given entity ID
+   * @return a Entity instance containing randomized values, based on the property definitions
+   */
   public static Entity createRandomEntity(final String entityID, final Map<String, Entity> referenceEntities) {
     return createEntity(entityID, new ValueProvider<Property, Object>() {
       public Object getValue(final Property key) {
@@ -280,6 +326,11 @@ public final class EntityUtil {
     });
   }
 
+  /**
+   * @param entityID the entity ID
+   * @param valueProvider the value provider
+   * @return an Entity instance initialized with values provided by the given value provider
+   */
   public static Entity createEntity(final String entityID, final ValueProvider<Property, Object> valueProvider) {
     final Entity entity = Entities.entityInstance(entityID);
     final boolean autoGenID = Entities.isPrimaryKeyAutoGenerated(entityID);
@@ -295,6 +346,12 @@ public final class EntityUtil {
     return entity;
   }
 
+  /**
+   * @param entity the entity to randomize
+   * @param includePrimaryKey if true then the primary key values are include
+   * @param referenceEntities entities referenced by the given entity
+   * @return the entity with randomized values
+   */
   public static Entity randomize(final Entity entity, final boolean includePrimaryKey, final Map<String, Entity> referenceEntities) {
     Util.rejectNullValue(entity, "entity");
     for (final Property.ColumnProperty property : Entities.getColumnProperties(entity.getEntityID(), includePrimaryKey, false, true)) {
@@ -311,6 +368,11 @@ public final class EntityUtil {
     return entity;
   }
 
+  /**
+   * @param property the property
+   * @param referenceEntities entities referenced by the given property
+   * @return a random value
+   */
   public static Object getRandomValue(final Property property, final Map<String, Entity> referenceEntities) {
     Util.rejectNullValue(property, "property");
     if (property instanceof Property.ForeignKeyProperty) {
@@ -343,6 +405,9 @@ public final class EntityUtil {
     }
   }
 
+  /**
+   * @return a Serializer, if one is available on the classpath
+   */
   @SuppressWarnings({"unchecked"})
   public static Serializer<Entity> getEntitySerializer() {
     if (!Configuration.entitySerializerAvailable()) {
@@ -359,6 +424,9 @@ public final class EntityUtil {
     }
   }
 
+  /**
+   * @return a Deserializer, if one is available on the classpath
+   */
   @SuppressWarnings({"unchecked"})
   public static Deserializer<Entity> getEntityDeserializer() {
     if (!Configuration.entityDeserializerAvailable()) {
@@ -392,16 +460,6 @@ public final class EntityUtil {
     }
 
     return false;
-  }
-
-  public static List<Entity.Key> copy(final List<Entity.Key> entityKeys) {
-    Util.rejectNullValue(entityKeys, "entityKeys");
-    final List<Entity.Key> copies = new ArrayList<Entity.Key>(entityKeys.size());
-    for (final Entity.Key key : entityKeys) {
-      copies.add((Entity.Key) key.getCopy());
-    }
-
-    return copies;
   }
 
   private static Object getRandomString(final Property property) {
